--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
     "final-form": "4.20.2",
+    "final-form-submit-errors": "^0.1.2",
     "prop-types": "15.7.2",
     "ra-data-json-server": "3.14.2",
     "ra-data-simple-rest": "3.13.4",
