--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "15.7.2",
     "ra-data-json-server": "3.14.2",
     "ra-data-simple-rest": "3.13.4",
+    "ra-language-russian": "^3.13.5",
     "react": "17.0.2",
     "react-admin": "3.14.3",
     "react-dom": "17.0.2",
